[Fixes] layer metadata upload form and static files

--- a/geonode/base/templates/base/maintenance.html
+++ b/geonode/base/templates/base/maintenance.html
@@ -5,7 +5,7 @@
   <head>
     <style>
       body {
-        background-color: #2c689c; //#313131
+        background-color: #f0ab00; //#313131
       }
       .container {
         margin: 0;
