--- a/geonode/monitoring/frontend/theme/overrides.scss
+++ b/geonode/monitoring/frontend/theme/overrides.scss
@@ -22,7 +22,7 @@
 @import '../node_modules/react-calendar-heatmap/dist/styles.css';
 @import '../node_modules/flag-icon-css/css/flag-icon.css';
 
-$color-primary: #2c689c;
+$color-primary: #f0ab00;
 $color-secondary: #ff8f31;
 $color-dark: #333333;
 $calendar-heatmap-color: lighten($color-primary, 15%);
