--- a/geonode/geoapps/templates/layouts/app_panels.html
+++ b/geonode/geoapps/templates/layouts/app_panels.html
@@ -42,8 +42,8 @@ form #mdeditor_form label{
   width: 100%;
 }
 #regions_multiselect_container .fstChoiceItem {
-  background-color: #2c689c;
-  border: #2c689c;
+  background-color: #f0ab00;
+  border: #f0ab00;
 }
 
 #mdeditor_form .mandatory-hint,#mdeditor_form .advanced-hint {
@@ -86,7 +86,7 @@ form #mdeditor_form label{
   display: table;
   table-layout: fixed;
   width: 100%;
-  color: #2c689c;
+  color: #f0ab00;
 }
 .wizard--progress > li {
   position: relative;
@@ -147,14 +147,14 @@ form #mdeditor_form label{
   width: 100%;
 }
 .wizard--progress > li a {
-  color: #2c689c;
+  color: #f0ab00;
 }
 .wizard--progress > li.is-active {
-  color: #2c689c;
+  color: #f0ab00;
 }
 .wizard--progress > li.is-active:before {
   color: #FFF;
-  background: #2c689c;
+  background: #f0ab00;
 }
 
 .wizard--progress > li.is-complete a {
