--- a/geonode/layers/templates/layouts/panels.html
+++ b/geonode/layers/templates/layouts/panels.html
@@ -1,10 +1,7 @@
 {% load i18n %}
 {% load static %}
 {% load floppyforms %}
-<script type="text/javascript">
-    // this is used by thumbnail.js to POST to the thumbnail update view
-    window.thumbnailUpdateUrl = '{% url 'layer_thumbnail' resource.alternate %}';
-</script>
+
 <!--<link href="{% static "lib/css/bootstrap-select.css" %}" rel="stylesheet" />-->
 <script type="text/javascript" src="{% static "geonode/js/utils/thumbnail.js" %}"></script>
 
@@ -45,8 +42,8 @@ form #mdeditor_form label{
   width: 100%;
 }
 #regions_multiselect_container .fstChoiceItem {
-  background-color: #2c689c;
-  border: #2c689c;
+  background-color: #f0ab00;
+  border: #f0ab00;
 }
 
 #mdeditor_form .mandatory-hint,#mdeditor_form .advanced-hint {
@@ -89,7 +86,7 @@ form #mdeditor_form label{
   display: table;
   table-layout: fixed;
   width: 100%;
-  color: #2c689c;
+  color: #f0ab00;
 }
 .wizard--progress > li {
   position: relative;
@@ -150,14 +147,14 @@ form #mdeditor_form label{
   width: 100%;
 }
 .wizard--progress > li a {
-  color: #2c689c;
+  color: #f0ab00;
 }
 .wizard--progress > li.is-active {
-  color: #2c689c;
+  color: #f0ab00;
 }
 .wizard--progress > li.is-active:before {
   color: #FFF;
-  background: #2c689c;
+  background: #f0ab00;
 }
 
 .wizard--progress > li.is-complete a {
@@ -232,8 +229,6 @@ span.grippy::after {
 
 <div class="tab-content">
 <div id="edit-metadata" class="tab-content tab-pane fade in active">
-{% block edit_progress %}
-
   <div id="completeness-hints" class="progress">
 
   <div class="mandatory-hint progress-bar" role="progressbar" style="width:25%">
@@ -242,22 +237,10 @@ span.grippy::after {
   <div class="advanced-hint progress-bar" role="progressbar" style="width:25%">
     {% trans "Mandatory" %}
   </div>
-  {% if UI_REQUIRED_FIELDS %}
-      <div class="metadata-hint progress-bar" role="progressbar" style="width:25%">
-        {% trans "Mandatory" %}
-      </div>
-      <div class="progress-bar" role="progressbar" style="width:25%">
-        {% trans "Optional" %}
-      </div>
-  {% else %}
-      <div class="progress-bar" role="progressbar" style="width:50%">
-        {% trans "Optional" %}
-      </div>
-  {% endif %}
-  
+  <div class="progress-bar" role="progressbar" style="width:50%">
+    {% trans "Optional" %}
+  </div>
 </div>
-{% endblock edit_progress %}
- {% block breadcrumbs %}
   <ul class="wizard--progress wizard--progress--medium">
       <li data-step="1" id="first" class="is-active" data-toggle="tab" href="#mandatory">
           <a>{% trans "Basic Metadata" %}</a>
@@ -266,18 +249,12 @@ span.grippy::after {
           <a>{% trans "Location and Licenses" %}</a>
       </li>
       <li data-step="3" data-toggle="tab" href="#ownership">
-        {% if UI_REQUIRED_FIELDS %}
-            <a>{% trans "Required Metadata" %}</a>
-        {% else %}
-            <a>{% trans "Optional Metadata" %}</a>
-        {% endif %}
+          <a>{% trans "Optional Metadata" %}</a>
       </li>
       <li data-step="4"  data-toggle="tab" href="#dataset">
           <a>{% trans "Dataset Attributes" %}</a>
       </li>
   </ul>
-  {% endblock breadcrumbs %}
-  {% block mandatory %}
     <div id="mandatory" class="tab-pane fade in active">
         <!--<br />-->
         <div class="panel-group">
@@ -315,24 +292,36 @@ span.grippy::after {
                                     </div>
                                 </div>
                                 <div class="col-lg-4">
-                                    <div id="req_item">
-                                      <span><label for="{{ layer_form.title|id }}">{{ layer_form.title.label }}</label></span>
-                                      <!--<p class="xxs-font-size">(Name by which the cited resource is known)</p>-->
-                                      {{ layer_form.title }}
-                                    </div>
-                                    <div id="req_item">
+                                    <span><label for="{{ layer_form.title|id }}">{{ layer_form.title.label }}</label></span>
+                                    <!--<p class="xxs-font-size">(Name by which the cited resource is known)</p>-->
+                                    {{ layer_form.title }}
+                                    <div>
                                         <span><label for="{{ layer_form.abstract|id }}">{{ layer_form.abstract.label }}</label></span>
                                         <!--<p class="xxs-font-size">(Brief narrative summary of the content of the resource/s)</p>-->
                                         {{ layer_form.abstract }}
                                     </div>
                                 </div>
                                 <div class="col-lg-5">
+                                    <div class="col-lg-12">
+                                        <span><label for="{{ layer_form.date_type|id }}">{{ layer_form.keywords.label }}</label></span>
+                                        {{ layer_form.keywords }}
+                                    </div>
+                                    {% if THESAURI_FILTERS %}
+                                    <div class="col-lg-12 thesauri_keywords">
+                                        {{ tkeywords_form }}
+                                    </div>
+                                    {% endif %}
+                                    <div class="col-lg-12">
+                                        <span><label for="{{ layer_form.date_content|id }}">{{ layer_form.date_content.label }}</label></span>
+                                        <!--<p class="xxs-font-size">(Date or time period that the data represents)</p>-->
+                                        {{ layer_form.date_content }}
+                                    </div>
                                     <div class="col-lg-6 col-xs-12">
                                         <span><label for="{{ layer_form.date_type|id }}">{{ layer_form.date_type.label }}</label></span>
                                         <!--<p class="xxs-font-size">(Identification of when a given event occurred)</p>-->
                                         {{ layer_form.date_type }}
                                     </div>
-                                    <div class="col-lg-6 col-xs-12" id="req_item">
+                                    <div class="col-lg-6 col-xs-12">
                                         <span><label for="{{ layer_form.date|id }}">{{ layer_form.date.label }}</label></span>
                                         <!--<p class="xxs-font-size">(When a given event occurred on the resource)</p>-->
                                         {{ layer_form.date }}
@@ -378,25 +367,24 @@ span.grippy::after {
                                             {% endfor %}
                                         </select>
                                     </div>
-                                    <div class="col-lg-12">
-                                        <span><label for="{{ layer_form.date_type|id }}">{{ layer_form.keywords.label }}</label></span>
-                                        {{ layer_form.keywords }}
-                                    </div>
-                                    {% if THESAURI_FILTERS %}
-                                    <div class="col-lg-12 thesauri_keywords">
-                                      {{tkeywords_form.as_p}}
-                                    </div>
-                                    {% endif %}
                                 </div>
                             </div>
+                        </div>
+                        <div class="row">
+                          <div class="col-lg-12">
+                            <div>
+                                <span><label for="{{ layer_form.data_description|id }}">{{ layer_form.data_description.label }}</label></span>
+                                <!--<p class="xxs-font-size">(Description or abstract of the data and methodology)</p>-->
+                                {{ layer_form.data_description }}
+                            </div>
+                          </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-    {% endblock %}
-    {% block advanced %}
+
     <div id="advanced" class="tab-pane fade">
         <div class="panel-group">
                 <div class="panel panel-default">
@@ -404,7 +392,6 @@ span.grippy::after {
                     <div class="panel-body">
                         <div class="" id="mdinfo">
                             <div class="">
-                            {% block layer_attributes %}
                                 <div class="col-lg-4">
                                     <div>
                                         <span><label for="{{ layer_form.language|id }}">{{ layer_form.language.label }}</label></span>
@@ -425,8 +412,6 @@ span.grippy::after {
                                         {{ layer_form.attribution }}
                                     </div>
                                 </div>
-                                {% endblock layer_attributes %}
-                                {% block layer_regions %}
                                 <div class="col-lg-4">
                                       <div id="regions_multiselect_container">
                                           <span><label for="{{ layer_form.regions|id }}">{{ layer_form.regions.label }}</label></span>
@@ -435,11 +420,9 @@ span.grippy::after {
                                       <div>
                                           <span><label for="{{ layer_form.data_quality_statement|id }}">{{ layer_form.data_quality_statement.label }}</label></span>
                                           <!--<p class="xxs-font-size">(General explanation of the data producer's knowledge about the lineage)</p>-->
-                                          {{ layer_form.data_quality_statement }}
+                                          {{ layer_form.data_quality_statement|safe }}
                                       </div>
                                 </div>
-                                {% endblock layer_regions %}
-                                {% block layer_constraints %}
                                 <div class="col-lg-4">
                                     <div>
                                         <span><label for="{{ layer_form.restriction_code_type|id }}">{{ layer_form.restriction_code_type.label }}</label></span>
@@ -452,22 +435,24 @@ span.grippy::after {
                                         {{ layer_form.constraints_other }}
                                     </div>
                                 </div>
-                                {% endblock layer_constraints %}
                             </div>
                             <div class="row">
-
+                              <div class="col-lg-12">
+                                <div>
+                                    <span><label for="{{ layer_form.source|id }}">{{ layer_form.source.label }}</label></span>
+                                    {{ layer_form.source }}
+                                </div>
+                              </div>
                             </div>
                         </div>
                     </div>
                 </div>
         </div>
     </div>
-    {% endblock %}
-    {% block other_tab %}{% endblock other_tab %}
-    {% block ownership %}
+
     <div id="ownership" class="tab-pane fade">
         <div class="panel-group"><div class="panel panel-default"><div class="panel-body">
-        <div id="mdinfo">
+        <div>
             <div class="col-xs-12 col-lg-4">
               <p>{% trans "Other, Optional, Metadata" %}</p>
                 <div>
@@ -480,28 +465,23 @@ span.grippy::after {
                     <!--<p class="xxs-font-size">(Brief narrative summary of the intentions with which the resource/s ...)</p>-->
                     {{ layer_form.purpose }}
                 </div>
-                <div>
-                    <span><label for="{{ layer_form.supplemental_information|id }}">{{ layer_form.supplemental_information.label }}</label></span>
-                    <!--<p class="xxs-font-size">(Any other descriptive information about the dataset)</p>-->
-                    {{ layer_form.supplemental_information }}
-                </div>
             </div>
             <div class="col-xs-12 col-lg-5">
-                    <div class="col-xs-12 col-lg-6 check-select">
+                <div class="col-xs-12">
+                    <div class="col-xs-12 col-lg-6" style="padding: 0px;">
                       <div class="input-group date">
                         <span><label for="{{ layer_form.temporal_extent_start|id }}">{{ layer_form.temporal_extent_start.label }}</label></span>
                         <!--<p class="xxs-font-size">(When a given event occurred on the resource)</p>-->
                         {{ layer_form.temporal_extent_start }}
                         </div>
                     </div>
-                    <div class="col-xs-12 col-lg-6 check-select">
+                    <div class="col-xs-12 col-lg-6" style="padding-left: 5px; padding-right: 0px;">
                         <div class="input-group date">
                         <span><label for="{{ layer_form.temporal_extent_end|id }}">{{ layer_form.temporal_extent_end.label }}</label></span>
                         <!--<p class="xxs-font-size">(Identification of when a given event occurred)</p>-->
                         {{ layer_form.temporal_extent_end }}
                         </div>
                     </div>
-                <div class="col-xs-12">
                     <div style="margin-top: 5px">
                         <span><label for="{{ layer_form.maintenance_frequency|id }}">{{ layer_form.maintenance_frequency.label }}</label></span>
                         <!--<p class="xxs-font-size">(Identification of when a given event occurred)</p>-->
@@ -512,12 +492,17 @@ span.grippy::after {
                         <!--<p class="xxs-font-size">(Method used to represent geographic information in the dataset)</p>-->
                         {{ layer_form.spatial_representation_type }}
                     </div>
+                    <div style="margin-top: 5px">
+                        <span><label for="{{ layer_form.spatial_resolution|id }}">{{ layer_form.spatial_resolution.label }}</label></span>
+                        <!--<p class="xxs-font-size">(Describes the spatial resolution: e.g. 1:50.000 or 30m)</p>-->
+                        {{ layer_form.spatial_resolution }}
+                    </div>
                 </div>
             </div>
             <div class="col-xs-12 col-lg-3">
               <div class="panel panel-default" style="margin-top: 5px">
                   <div class="panel-heading">{% trans "Responsible Parties" %}</div>
-                  <div class="panel-body check-select">
+                  <div class="panel-body">
                       <span><label for="{{ layer_form.poc|id }}">{{ layer_form.poc.label }}</label></span>
                       {{ layer_form.poc }}
                   </div>
@@ -541,8 +526,6 @@ span.grippy::after {
         </div>
       </div></div></div>
     </div>
-    {% endblock %}
-    {% block dataset %}
     <div id="dataset" class="tab-pane fade">
       <div class="panel-group"><div class="panel panel-default"><div class="panel-body">
         <div>
@@ -593,7 +576,6 @@ span.grippy::after {
         </div>
       </div>
     </div>
-    {% endblock %}
   </div>
 </div>
 <div id="preview" class="tab-pane fade" style="overflow: hidden;">
