--- a/geonode/layers/templates/layers/layer_replace.html
+++ b/geonode/layers/templates/layers/layer_replace.html
@@ -81,6 +81,8 @@
               <p><strong>Server Error: timeout</strong></p>
               <p><italic>Please check your network connection. In case of Layer Upload make sure GeoServer is running and accepting connections.</italic></p><br/>
               <p><strong>Please contact system administrator or rizky.firmansyah@wri.org</strong></p>
+              <hr/>
+              <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
           </div>
       </div>
     </div>
