--- a/geonode/layers/templates/layers/layer_style_upload.html
+++ b/geonode/layers/templates/layers/layer_style_upload.html
@@ -62,17 +62,28 @@
 
     <div id="upload-status"></div>
 
-    <section id="drop-zone">
-      <h3><i class="fa fa-cloud-upload"></i><br />{% trans "Drop files here" %}</h3>
+    <section id="drop-zone" onclick="document.getElementById('file-input').click();">
+      <h3><i class="fa fa-cloud-upload" style="color: cornflowerblue;"></i><br />{% trans "Drag and drop your " %}<span style="color:midnightblue">{% trans "style file here" %}</span>{% trans " or click here to upload" %}</h3>
+      <form id="file-uploader" method="post" enctype="multipart/form-data">
+        <!-- UI change to hide the list of previously uploaded files from the user -->
+        <input type="file" id="file-input" style="display: none;" accept=".sld,.xml" multiple>
+      </form>
     </section>
 
-    <p>{% trans " or select them one by one:" %}</p>
-
-    <form id="file-uploader" method="post" enctype="multipart/form-data">
-      <!-- UI change to hide the list of previously uploaded files from the user -->
-      <input type="file" id="file-input" style="display: none;" multiple>
-      <input class="btn btn-default" type="button" value="{% trans "Choose Files" %}" onclick="document.getElementById('file-input').click();">
-    </form>
+    <div class="learn-more">
+        <p>Learn more about supported file formats<button type="button" class="btn btn-primary" data-toggle="modal" data-target=".learn-more-modal" style="background: none; border: none;"><i class="fa fa-info-circle" aria-hidden="true" style="background: #f0ab00;"></i></button> </p>
+    </div>
+    <div class="modal fade learn-more-modal" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" aria-hidden="true">
+      <div class="modal-dialog modal-sm">
+          <div class="modal-content learn-more-modal-content">
+              <p>Currently only styles in <strong>SLD 1.0 and 1.1</strong> format can be uploaded</p><br/>
+              <p>For more info, check the documentation in link below</p>
+              <a target="_blank" href="https://docs.geonode.org/en/master/usage/managing_layers/layer_styling.html#uploading-styles">Geonode Uploading Styles Documentation</a>
+              <hr/>
+              <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+          </div>
+      </div>
+    </div>
 
     <section class="widget">
       <ul id="global-errors"></ul>
