--- a/geonode/templates/invitations/forms/_invite.html
+++ b/geonode/templates/invitations/forms/_invite.html
@@ -10,7 +10,7 @@
 <form id="invite-form" method="POST" action="{% url 'geonode.invitations:geonode-send-invite' %}">
   {% csrf_token %}
   <div class="form-group">
-      <label for="id_email">Email</label>
+      <label for="id_email" style="margin-top: 1vh;">Email</label>
       <input style="min-width: 474px;" type="text" name="email" id="id_email" value="{{ form.email.value }}" class="form-control" placeholder="{% trans 'Email' %}">
   </div>
   <div class="form-group">
