--- a/geonode/layers/templates/layers/layer_metadata_advanced.html
+++ b/geonode/layers/templates/layers/layer_metadata_advanced.html
@@ -41,7 +41,7 @@
         <p>
           {% if not layer.metadata_uploaded_preserve %}
             <a href="{% url 'layer_detail' layername=resource.alternate %}" class="btn btn-default">{% trans "Return to Layer" %}</a>
-            <input type="submit" id="btn_upd_md_up" class="btn btn-primary" value="{% trans "Update" %}"/>
+            <input type="submit" id="btn_upd_md_up" class="btn btn-update" value="{% trans "Update" %}"/>
           {% endif %}
           <a href="{% url "layer_browse" %}?limit={{ CLIENT_RESULTS_LIMIT }}" class="btn btn-primary pull-right">{% trans "Explore Layers" %}</a>
         </p>
