--- a/geonode/templates/account/signup.html
+++ b/geonode/templates/account/signup.html
@@ -30,7 +30,7 @@
                             <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
                         {% endif %}
                         <div class="form-actions">
-                            <button type="submit" class="btn btn-primary btn-full">{% trans "Sign up" %}</button>
+                            <button type="submit" class="btn btn-primary btn-full" style="margin-bottom: 20px;">{% trans "Sign up" %}</button>
                         </div>
                     </fieldset>
                 </form>
