--- a/geonode/templates/search/search.html
+++ b/geonode/templates/search/search.html
@@ -44,45 +44,58 @@
 
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
   <script type="text/javascript">
-      function animateLogin() {
-          // Wrap every letter in a span
-          $('.ml13').each(function(){
-              $(this).html($(this).text().replace(/([^\x00-\x80]|\w)/g, "<span class='letter' onclick=\"window.location.href='https://data.wri-indonesia.id/account/login/?next=/layers/';\">$&</span>"));
-          });
-          anime.timeline({loop: false})
-          .add({
-              targets: '.ml13 .letter',
-              scale: [4,1],
-              translateY: [100,0],
-              translateZ: 0,
-              opacity: [0,1],
-              easing: "easeOutExpo",
-              duration: 900,
-              delay: function(el, i) {
-                  return 300 + 30 * i;
-              }
-          })
-          .add({
-              targets: '.ml13 .letter',
-              translateY: [0,-100],
-              opacity: [1,0],
-              easing: "easeInExpo",
-              duration: 2200,
-              delay: function(el, i) {
-                  return 100 + 30 * i;
-              }
-          });
-      };
-      $(function() {
-          setTimeout(animateLogin, 7000);
-          $.when(animateLogin()).done(function() {
-              setTimeout(function() {
-                  $(".composition").css("display", "none");
-              }, 7000);
-          });
-      });
-          
-  </script>
+        function animateLogin() {
+            // Wrap every letter in a span
+            $('.ml13').each(function(){
+                $(this).html($(this).text().replace(/([^\x00-\x80]|\w)/g, "<span class='letter' onclick=\"window.location.href='https://data.wri-indonesia.id/account/login/?next=/layers/';\">$&</span>"));
+            });
+            anime.timeline({loop: true})
+            .add({
+                targets: '.ml13 .letter',
+                translateY: [100,0],
+                translateZ: 0,
+                opacity: [0,1],
+                easing: "easeOutExpo",
+                duration: 900,
+                delay: function(el, i) {
+                    return 300 + 30 * i;
+                }
+            })
+            .add({
+                targets: '.ml13 .letter',
+                translateY: [0,-100],
+                opacity: [1,0],
+                easing: "easeInExpo",
+                duration: 2200,
+                delay: function(el, i) {
+                    return 100 + 30 * i;
+                }
+            });
+        }
+        $(function() {
+            animateLogin();
+
+            $(document).mouseup(function(e) 
+            {
+                var container = $(".close-signin");
+
+                if (!container.is(e.target) && container.has(e.target).length === 0) {
+                    $('.composition').hide();
+                } else {
+                    $('.composition').remove();
+                }
+            });
+
+            $('<a href="#" class="close-signin">').insertBefore(".ml13");
+        
+            $(".ml13").hover(function() {
+                $(".ml13").hide();
+                $("<h1 class='ml14' onclick=\"window.location.href='https://data.wri-indonesia.id/account/login/?next=/layers/';\">sign in</h1>").insertAfter(".ml13");
+            });
+
+        });
+            
+    </script>
   {% endif %}
 
 {% endblock extra_script %}
