--- a/geonode/documents/templates/layouts/doc_panels.html
+++ b/geonode/documents/templates/layouts/doc_panels.html
@@ -393,8 +393,8 @@ span.grippy::after {
                                         {{ document_form.doi }}
                                     </div>
                                     <div>
-                                        <span><label for="{{ document_form.attribution|id }}">{{ document_form.attribution.label }}</label></span>
-                                        {{ document_form.attribution }}
+                                        <span><label for="{{ document_form.author|id }}">{{ document_form.author.label }}</label></span>
+                                        {{ document_form.author }}
                                     </div>
                                 </div>
                                 <div class="col-lg-4">
