--- a/geonode/geoapps/templates/layouts/app_panels.html
+++ b/geonode/geoapps/templates/layouts/app_panels.html
@@ -386,8 +386,8 @@ span.grippy::after {
                                         {{ geoapp_form.doi }}
                                     </div>
                                     <div>
-                                        <span><label for="{{ geoapp_form.attribution|id }}">{{ geoapp_form.attribution.label }}</label></span>
-                                        {{ geoapp_form.attribution }}
+                                        <span><label for="{{ geoapp_form.author|id }}">{{ geoapp_form.author.label }}</label></span>
+                                        {{ geoapp_form.author }}
                                     </div>
                                 </div>
                                 <div class="col-lg-4">
