--- a/geonode/maps/templates/layouts/map_panels.html
+++ b/geonode/maps/templates/layouts/map_panels.html
@@ -394,8 +394,8 @@ span.grippy::after {
                                         {{ map_form.doi }}
                                     </div>
                                     <div>
-                                        <span><label for="{{ map_form.attribution|id }}">{{ map_form.attribution.label }}</label></span>
-                                        {{ map_form.attribution }}
+                                        <span><label for="{{ map_form.author|id }}">{{ map_form.author.label }}</label></span>
+                                        {{ map_form.author }}
                                     </div>
                                 </div>
                                 <div class="col-lg-4">
