--- a/geonode/people/templates/people/_profile_list_item.html
+++ b/geonode/people/templates/people/_profile_list_item.html
@@ -2,24 +2,21 @@
 
 {% verbatim %}
   <article ng-repeat="profile in results" ng-cloak class="ng-cloak">
-    <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 profile-container" style="height:180px;width:25%;">
+    <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 profile-container" style="width:25%;">
       <div class="col-xs-12 profile-avatar">
-        <div class="col-xs-4 profile-image">
-          <a href="{{ profile.profile_detail_url }}" ><img ng-src="{{ profile.avatar_100 }}"/></a>
-        </div>
-        <div class="col-xs-8 profile-details" style="height: 110px;">
-          <h5>
+        <div class="col-xs-12 profile-details">
+          <h5 id="profile_info_name">
             <a href="{{ profile.profile_detail_url }}">{{ profile.first_name != '' ? profile.first_name : profile.username }} {{ profile.last_name != '' ? profile.last_name : '' }}
             </a>
           </h5>
-          <p>
-            <small ng-hide="profile.organization">
+          <p id="profile_info_position">
+            <small ng-hide="profile.position">
               {% endverbatim %}
-              {% trans "No Organization Info" %}
+              {% trans "No Position Info" %}
               {% verbatim %}
             </small>
-            <small ng-show="profile.organization">
-              {{ profile.organization | limitTo:30 }} <small ng-if="profile.organization.length > 30">...</small>
+            <small ng-show="profile.position">
+              {{ profile.position | limitTo:30 }} <small ng-if="profile.position.length > 30">...</small>
             </small>
           </p>
           <!-- <p>{{ profile.username }}</p> -->
@@ -27,6 +24,9 @@
         </div>
         <div class="col-xs-12 profile-items">
           <ul class="list-inline">
+            <li style="width: 25%">
+              <a href="{{ profile.profile_detail_url }}" ><img ng-src="{{ profile.avatar_100 }}"/></a>
+            </li>
             <li>
               <a href="{{ profile.profile_detail_url }}?content=layers">
                 <i class="fa fa-square-o rotate-45"></i>
