--- a/geonode/templates/metadata_detail.html
+++ b/geonode/templates/metadata_detail.html
@@ -133,8 +133,8 @@
         <dt>{% trans "DOI" %}</dt>
         <dd>{{ resource.doi }}</dd>
 
-        <dt>{% trans "Attribution" %}</dt>
-        <dd>{{ resource.attribution }}</dd>
+        <dt>{% trans "Author" %}</dt>
+        <dd>{{ resource.author }}</dd>
 
     </dl>
 
