removing unnecessary attributes

--- a/geonode/layers/templates/layouts/panels.html
+++ b/geonode/layers/templates/layouts/panels.html
@@ -341,8 +341,8 @@ span.grippy::after {
                                             name="category_choice_field"
                                             id="category_form"
                                             class="selectpicker form-control"
+                                            multiple
                                             >
-                                            {% comment %} multiple> {% endcomment %}
                                             <option {% if not category_form.initial %} selected="selected" {% endif %} value="">---</option>
                                           {% for choice in category_form.category_choice_field.field.choices %}
                                               <option
