--- a/geonode/layers/templates/layers/layer_metadata_advanced.html
+++ b/geonode/layers/templates/layers/layer_metadata_advanced.html
@@ -123,7 +123,7 @@
               {% for choice in category_form.category_choice_field.field.choices %}
               <div class="col-md-6">
                 <label class="fancy-checkbox">
-                    <input type="radio" name="category_choice_field" value="{{ choice.0 }}"
+                    <input type="checkbox" name="category_choice_field" value="{{ choice.0 }}"
                       {% ifequal category_form.initial choice.0 %} checked="checked" {% endifequal %} />
                     {{ choice.1 }}
                 </label>
